# discord-rag

./: README.md  docker-compose.yml
bot/src/: config.js  index.js  package-lock.json  registercommands.js
docs/img/: api.excalidraw  bot.excalidraw  discord-rag-architecture.excalidraw  indexing-pipeline.excalidraw  initial-data-ingestion.excalidraw
initial_ingestion/: docker-compose.yml
initial_ingestion/src/: .env  config.js  ingestion.js
messages_download/: Dockerfile  config.json  docker-compose.yml  download.js  package-lock.json  package.json
messages_download/src/: .env  export.js  package-lock.json  package.json
msg_export/src/: config.js  package-lock.json  package.json
production/api/: .env  Dockerfile  pyproject.toml
production/api/src/api/: __main__.py  dependencies.py  main.py  settings.py
production/api/src/api/agent/: __init__.py  agent.py  system_prompt.py
production/api/src/api/inference/: __init__.py  inference.py  prompting.py
production/bot/src/: .env  config.js  package.json
production/bot/src/apis/: rag-api.js
production/bot/src/commands/ask/: ask.js
production/indexing_pipeline/: .env  Dockerfile  docker-compose.yml  pyproject.toml
production/indexing_pipeline/src/indexing_pipeline/: CustomMongodbLoader.py  __main__.py  chunking.py  dependencies.py  ingestion.py  main.py  preprocessing.py  settings.py  vector_store.py
production/initial_ingestion/: Dockerfile
production/initial_ingestion/src/: .env  ingestion.js  package.json
production/vllm/: .env
