[project]
name = "indexing-pipeline"
version = "0.1.0"
description = "Indexing pipeline for the Discord-RAG project"
authors = [{ name = "antoinelrnld", email = "38052726+antoinelrnld@users.noreply.github.com" }]
requires-python = ">=3.10,<4"
license = "MIT"
dependencies = ["utils"]

[tool.uv]

[tool.uv.sources]
utils = { path = "../../packages/utils/", editable=true }

[project.scripts]
indexing-pipeline = "indexing_pipeline.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["src/indexing_pipeline"]

[tool.hatch.build.targets.wheel]
include = ["src/indexing_pipeline"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel.sources]
"src/indexing_pipeline" = "indexing_pipeline"