[project]
name = "indexing-pipeline"
version = "0.1.0"
description = "Indexing pipeline for the Discord-RAG project"
authors = [{ name = "antoinelrnld", email = "38052726+antoinelrnld@users.noreply.github.com" }]
requires-python = ">=3.10,<4"
license = "MIT"
dependencies = [
    "langchain-experimental==0.4.1",
    "langchain-community==0.4.1",
    "langchain-core==1.2.4",
    "langchain-redis==0.2.5",
    "langchain-openai==1.1.6",
    "motor==3.7.1",
]

[tool.uv]

[project.scripts]
indexing-pipeline = "indexing_pipeline.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["src/indexing_pipeline"]

[tool.hatch.build.targets.wheel]
include = ["src/indexing_pipeline"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel.sources]
"src/indexing_pipeline" = "indexing_pipeline"
